Eclipse1/SalesforceCI/ Small Business/objects/Connect_Registration__c.object
<CustomObject>
    <description>A registration and related attendance data for an Event from Connect Your Salesteam.</description>
    <fields>
        <fullName>Attendance_Date__c</fullName>
        <description>The time the user attended the event.</description>
        <label>Attendance Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did the user attend the event?</description>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <description>If cancelled, when was it cancelled.</description>
        <label>Cancellation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was this registration cancelled?</description>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certificate_Number__c</fullName>
        <description>The certificate number in Connect should the Contact or Lead pass the course, if applicable.</description>
        <label>Certificate Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connect_Event__c</fullName>
        <description>The Event the user is registered for.</description>
        <label>Event</label>
        <referenceTo>Connect_Event__c</referenceTo>
        <relationshipLabel>Event Registrations</relationshipLabel>
        <relationshipName>Connect_Registrations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact record this registration belongs to.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Connect_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coupon_Code_Group__c</fullName>
        <description>If applicale, what coupon code group does the coupon code belong to.</description>
        <label>Coupon Code Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupon_Code__c</fullName>
        <description>What coupon (if any) was used in this registration.</description>
        <label>Coupon Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupon_Discount_Amount__c</fullName>
        <description>Amount of discount. Examples: &quot;$5.00&quot;, &quot;25%&quot;.</description>
        <label>Coupon Discount Amount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set if the user passed the piece of content, if applicable.</description>
        <label>Course Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Connect_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <description>How much money was paid by the registrant for this event (after any applicable discount).</description>
        <label>Paid Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paypal_Transaction_ID__c</fullName>
        <description>If applicable, the Paypal Transaction ID associated with the payment for this registration.</description>
        <label>Paypal Transaction ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Answers__c</fullName>
        <description>Answers to any custom questions from the registration form.</description>
        <label>Registration Answers</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <description>The time the user registered for the event.</description>
        <label>Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Registration_ID__c</fullName>
        <description>Unique ID of record in Connect Your Salesteam.</description>
        <externalId>true</externalId>
        <label>CYSID</label>
        <length>27</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>The score the Contact or Lead achieved on this events content, if applicable.</description>
        <label>Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Event Registration</label>
    <nameField>
        <displayFormat>CYS{000000}</displayFormat>
        <label>Event Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>